Fix responsive on mobile

--- a/src/components/PokePagination/styles.scss
+++ b/src/components/PokePagination/styles.scss
@@ -15,6 +15,10 @@ li {
   display: flex;
   position: relative;
   top: -200px;
+
+  @media (max-width: 500px) {
+    top: -100px;
+  }
 }
 
 .page-item {
